[package]
name = "wake_rs"
version = "1.0.2"
edition = "2021"
description = "wake_rs"
build = "build.rs"

[package.metadata.winres]
OriginalFilename = "wake_rs.exe"
LegalCopyright = "© 2022 Ben Hutchison"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.88"
wol-rs = "1.0.0"
home = "0.5.4"

[build-dependencies]
winres = "0.1.12"
chrono = "0.4.23"